fix homepage hero on mobile and remove extra whitespace

--- a/all_static/css/main.css
+++ b/all_static/css/main.css
@@ -7989,7 +7989,7 @@ div#notebook {
 
 .page.\--home .hero {
   width: 100%;
-  height: 250px;
+  margin-top: 90px !important;
   max-height: 400px;
   display: -webkit-box;
   display: -webkit-flex;
@@ -8009,10 +8009,6 @@ div#notebook {
   position: relative;
   overflow: hidden;
   }
-  @media (max-width: 584px) {
-    .page.\--home .hero {
-      height: 100vh;
-      background-size: cover; } }
   .page.\--home .hero .\--welcome {
     position: relative;
     z-index: 2;
@@ -9593,10 +9589,6 @@ section > .nav-breadcrumb-container {
   .breadcrumb-nav{
     display: none !important; }
 
-    body main.\--page {
-      margin-top: 120px;
-    }
-
     .header-container{
       position: absolute !important;
     }
@@ -9607,6 +9599,15 @@ section > .nav-breadcrumb-container {
         margin-top: 150px;
       }
     }
+
+    @media (max-width: 400px) {
+      .page.\--home .hero {
+        margin-top: 120px !important;
+        max-height: 600px;
+      }
+    }
+
+    
 
 .breadcrumb-nav a{
   display: flex;
